# Primefactor

./: CMakeLists.txt  largeNumber.cpp  largeNumber.h  main.cpp
